2005-11-26  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2005-11-26  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: avoid duplicate 'R' accesskeys (Closes: #322228)

2005-11-26  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/totem-playlist.c: (totem_playlist_set_cdindex): patch from
	Jens Granseuer <jensgr@gmx.net> to make libmusicbrainz optional
	(Closes: #315918)

2005-11-26  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_update):
	When the current media has a video stream, make sure to show 
	the Video section of the property box. (Closes: #322469)

2005-11-25  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Patch from Frank Arnold <frank@scirocco-5v-turbo.de>
	to fix the access keys for saturation and hue being mixed up
	(Closes: #322228)

2005-11-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/bacon-message-connection.c: (is_owned_by_user),
	(find_file_with_pattern), (socket_filename): update from libbacon CVS
	(Closes: #322248)

2005-11-24  Bastien Nocera  <hadess@hadess.net>

        * data/totem.desktop.in.in.in: Remove the empty DocPath line to
	pass desktop-file-validate (Closes: #322337)

2005-11-19  Christian Persch  <chpe@cvs.gnome.org>

	* src/totem-mozilla-plugin.cpp: Fix double-free in NP_Shutdown.
	(Closes: #321862.)

2005-11-11  Christian Persch  <chpe@cvs.gnome.org>

	* src/totem-mozilla-plugin.cpp: Don't use nsCOMPtr in the plugin.
	Fixes crash when running a normal plugin in a browser debug build,
	bug #321254.

2005-11-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:	Allow compilation against xulrunner.
	Patch by Robert O'Callahan <rocallahan@novell.com>. (Closes: #320921)

2005-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_signal_idler), (got_found_tag),
	(parse_stream_info), (cb_audio_fixate), (get_num_audio_channels),