@@ -1,3 +1,8 @@
+2005-11-28  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-mozilla-viewer.c: build with newer version of D-Bus
+	(Closes: #322436)
+
 2005-11-26  Bastien Nocera  <hadess@hadess.net>
 
 	* NEWS: upd
